--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,6 +47,27 @@
     <string name="error_empty_login">Please, enter your login</string>
     <string name="error_empty_password">Please, enter your password</string>
 
+    <string name="please_select_filters">Please select filters</string>
+    <string name="error_getting_date_range">Error in getting date range</string>
+    <string name="no_mood_data">No mood data for the selected period</string>
+    <string name="no_notes">No notes for the selected period</string>
+    <string name="no_activities">No activities for the selected period</string>
+    <string name="no_goals">No goals for the selected period</string>
+    <string name="delete_confirmation_title">Delete entry?</string>
+    <string name="delete_confirmation_message">Are you sure you want to delete this entry?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="mood_label">Mood: %1$s\nDate: %2$s\nComment: %3$s\nEmotions: %4$s\n\n</string>
+    <string name="note_label">Topic: %1$s\nComment: %2$s\nDate: %3$s\n\n</string>
+    <string name="activity_label">Name: %1$s\nCategory: %2$s\nIntensity: %3$s\nDuration: %4$s\nComments: %5$s\n\n</string>
+    <string name="goal_label">Goal: %1$s\nDeadline: %2$s\nNotes: %3$s\n\n</string>
+
+    <string name="account_deleted_successfully">Account deleted successfully</string>
+    <string name="failed_to_delete_account">Failed to delete account</string>
+
+    <string name="profile_updated_successfully">Профиль успешно обновлен</string>
+    <string name="profile_update_error">Ошибка обновления профиля</string>
+
     <string name="set_goal" translatable="true">Set goal</string>
     <string name="go_to_profile" translatable="true">Go to profile</string>
 
